<?xml version="1.0"?>
<package>
    <name>car_control_manual</name>
    <version>0.0.1</version>
    <description>Car Control Manual package</description>
    <maintainer email="bucketzxm@gmail.com">simon</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
    <export>

    </export>

</package>